# AarhusCase

./: .gitignore  CALIBRATION_RUNBOOK.md  pyproject.toml
aarhus_model/: heating_curve.py  hydronic_param_est.py  only_ahu_param_est.py  only_envelope_param_est.py  skoven_model.py
aarhus_model/generated_files/cached_data/: name(core_indoor_temperature)_stepSize(600)_start_time(15-01-2025 00-00-00)_end_time(05-02-2025 00-00-00)_cached.pickle  name(core_indoor_temperature)_stepSize(600)_start_time(15-01-2025 00-00-00)_end_time(22-01-2025 00-00-00)_cached.pickle  name(core_indoor_temperature)_stepSize(600)_start_time(30-03-2025 00-00-00)_end_time(06-04-2025 00-00-00)_cached.pickle  name(core_indoor_temperature)_stepSize(600)_start_time(31-03-2025 00-00-00)_end_time(07-04-2025 00-00-00)_cached.pickle  (+32 more)
aarhus_model/generated_files/data/skoven/: ecl310_TRetHea_y_processed.csv  (+17 more)
data_ingest/: danish_decode.py  el_meter.py  export_t4b_csvs.py  meter_matcher.py  outdoor_synth.py  remoni_indoor.py  skoven_bms.py  unify.py  varme_meter.py  weather_openmeteo.py
docs/: PLAN.md  RL_CONTROL_NEXT_STEPS.md  RL_CONTROL_PLAN.md  RL_CONTROL_PLAN_V2.md  implementation_summary.md
scripts/: analyze_calibration.py  closed_loop_diagram.py  diag_curve_fit.py  plot_rl_training.py  rl_finish_watcher.sh  smoke_test.py  validation_plots.py
t4b_gym/: t4b_gym_env.py
use_case/: baseline_eval.py  model_eval.py  policy_input_output.json  rl_config.py  skoven_RL_control.py
use_case/building_configs/: baekken.yaml  engen.yaml  skoven.yaml  stranden.yaml
use_case/logs/: monitor.csv
(+44 files in other folders)
