[project]
name = "aarhuscase"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "twin4build",
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "pandas>=2.2",
  "numpy>=1.26,<2.0",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "python-dateutil>=2.9",
  "tzdata>=2024.1",
  "pvlib>=0.11",
  "pyyaml>=6.0",
  "scipy>=1.13",
  "tensorboard>=2.16",
]

[tool.uv.sources]
twin4build = { path = "../Twin4Build", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_ingest", "aarhus_model", "t4b_gym", "use_case"]
